--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ a {
 }
 
 #right h4 {
-  width: 20%;
   margin: 0 0 20px;
   text-transform: uppercase;
   font-size: 14px;
@@ -44,7 +43,7 @@ a {
   .right h4,
   .right .content {
     display: block;
-    vertical-align: top;
+    /* vertical-align: top; */
     width: 100%;
   }
 }
@@ -59,20 +58,7 @@ a {
   height: 100%;
 }
 
-/* .bg-img { */
-  /* background: url('./assets/profile.png') center center no-repeat; */
-  /* background-size: cover;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-} */
-
 .bg-img{
-  /* content: ""; */
   background-size: cover;
   height: 100%;
   width: 100%;
@@ -85,9 +71,3 @@ a {
   background-image: linear-gradient(to left top, #43cea2, #185a9d);
   opacity: 0.85;
 }
-
-/* @media screen and (max-width: 1000px) {
-  .bg-img {
-    position: relative;
-  }
-} */
